--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
                 <div class="detail d-flex-c">Mashhad IR</div>
             </div>
         </div>
+
+        <script src="/repository-task01/script.js"></script>
     </body>
 </html>
