--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <body>
         <div class="container d-flex-c">
             <div class="box">
-                <div class="cover d-flex-c">
+                <div class="cover 1 d-flex-c">
                     <i class="ri-mail-fill"></i>
                 </div>
                 <div class="detail d-flex-c">hossein.hp.1394@gmail.com</div>
             </div>
             <div class="box">
-                <div class="cover d-flex-c">
+                <div class="cover 2 d-flex-c">
                     <i class="ri-smartphone-line"></i>
                 </div>
                 <div class="detail d-flex-c">+98 9013795940</div>
             </div>
             <div class="box">
-                <div class="cover d-flex-c">
+                <div class="cover 3 d-flex-c">
                     <i class="ri-map-pin-line"></i>
                 </div>
                 <div class="detail d-flex-c">Mashhad IR</div>
